--- a/style-transfer-frontend/src/App.css
+++ b/style-transfer-frontend/src/App.css
@@ -11,9 +11,9 @@ body {
 h1 {
   color: #1e3a8a;
   font-family: 'Orbitron', sans-serif;
-  font-size: 2em; /* Уменьшил с 2.5em */
-  margin-bottom: 20px; /* Уменьшил с 40px */
-  text-align: left; /* Изменил с center */
+  font-size: 2em; 
+  margin-bottom: 20px; 
+  text-align: left; 
   width: 100%;
 }
 
@@ -243,6 +243,7 @@ button:disabled {
 .result-column {
   flex: 0 0 30%;
   position: relative;
+  margin-left: 5rem;
 }
 
 .app-wrapper {
